--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
     --second-bg-color: #e0e0e0; /* lighter gray for secondary backgrounds */
     --second-bg-color-transparent: #e0e0e030; /* lighter gray with transparency */
 
-    --text-color: #0000ff; /* blue text */
+    --text-color: #1b1919; /* Black text */
 
     --main-color: #0000ff; /* main blue color */
     --second-color: #007bff; /* secondary blue color */
