update home and about sections

--- a/css/style.css
+++ b/css/style.css
@@ -236,8 +236,7 @@ header span {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: #5a56eb dashed 2px;
-
+    border: 2px dashed rgba(90, 86, 235, 0); /* Transparent border */
 }
 
 .home .container-left span {
