--- a/css/style.css
+++ b/css/style.css
@@ -328,12 +328,11 @@ header span {
 
 }
 
-
 .about .container-upper .container-left {
     display: flex;
     flex-direction: column;
-    /*justify-content: center;*/
-    border: #5a56eb dashed 2px;
+    /* justify-content: center; */
+    border: 2px dashed rgba(90, 86, 235, 0); /* Transparent border */
     width: 100%;
 }
 
