--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,8 @@ header {
     right: 0;
     z-index: 1000;
     background-size: 200px 200px;
-    /*background: transparent;*/
+    background: rgba(0,0,0,.1);
+    backdrop-filter: blur(5px);
     /*border-bottom: 1px solid transparent;*/
     transition: all 0.45s;
 }
