--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,7 @@ header span {
 .qualification__title {
     font-size: 1.2rem;
     font-weight: 600;
-    color: var(--main-color);
+    color: var(--second-color);
     margin-bottom: 15px;
 }
 
@@ -450,7 +450,7 @@ header span {
     margin-bottom: 15px;
     padding: 0 10px;
     border-radius: 20px;
-    background-color: #000000;
+    background-color: var(--main-color);
 }
 
 .qualification__content {
@@ -466,7 +466,7 @@ header span {
     display: inline-block;
     width: 13px;
     height: 13px;
-    background-color: #000000;
+    background-color: var(--main-color);
     border-radius: 50%;
 }
 
@@ -474,7 +474,7 @@ header span {
     display: block;
     width: 2px;
     height: 100%;
-    background-color: #000000;
+    background-color: var(--main-color);
     transform: translate(6px, -7px);
 }
 
