--- a/css/style.css
+++ b/css/style.css
@@ -1161,8 +1161,11 @@ header span {
 
     .skills__container {
         display: flex;
-        justify-content: space-between; /* Aligns the columns to the left and right */
-        gap: 20px; /* Adjust this value as needed */
+        flex-direction: column;
+
+        /*grid-template-columns: none;*/
+        grid-template-columns: none;
+        gap: 0px;
     }
 
     .skills__column {
