--- a/css/style.css
+++ b/css/style.css
@@ -1333,23 +1333,32 @@ header span {
 
 /* scrollbar  */
 /* Total scrollbar styling */
-::-webkit-scrollbar {
-    width: 12px; /* Adjust the width of the scrollbar */
-}
+/* Default scrollbar styling for mobile devices */
+/* This will be applied by default and will cover mobile devices */
 
-/* Track of the scrollbar */
-::-webkit-scrollbar-track {
-    background: #f1f1f1; /* Color of the track */
-    border-radius: 10px; /* Roundness of the track */
-}
+/* Custom scrollbar styling for desktop */
+@media screen and (min-width: 410) {
+    /* Adjust this min-width value based on your breakpoint for desktop view */
 
-/* Handle of the scrollbar */
-::-webkit-scrollbar-thumb {
-    background: #888; /* Color of the scrollbar thumb */
-    border-radius: 10px; /* Roundness of the thumb */
-}
+    /* Total scrollbar styling */
+    ::-webkit-scrollbar {
+        width: 12px; /* Adjust the width of the scrollbar */
+    }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Color when the thumb is hovered */
+    /* Track of the scrollbar */
+    ::-webkit-scrollbar-track {
+        background: #f1f1f1; /* Color of the track */
+        border-radius: 10px; /* Roundness of the track */
+    }
+
+    /* Handle of the scrollbar */
+    ::-webkit-scrollbar-thumb {
+        background: #888; /* Color of the scrollbar thumb */
+        border-radius: 10px; /* Roundness of the thumb */
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555; /* Color when the thumb is hovered */
+    }
 }
