--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ header span {
 .btn {
     display: inline-block;
     padding: 12px 28px;
-    border: 2px solid var(--main-color);
+    /* border: 2px solid var(--main-color); */
     border-radius: 50px;
     color: var(--text-color);
     letter-spacing: 1px;
@@ -302,7 +302,7 @@ header span {
     font-weight: 500;
     transition: all 0.45s ease;
     margin: 5px;
-    box-shadow: none;
+    box-shadow: 0px 0px 2px rgba(0, 0, 255, 0.8);
 }
 
 .btn:hover,
